Correction letterSpacing

--- a/style.css
+++ b/style.css
@@ -1028,7 +1028,7 @@ button[type="submit"] {
 .text-center.hero-bloc-text.tc-white {
 
     color: #fff!important;
-    letter-spacing: 10px;
+    letter-spacing: 5px;
     
 }
 
